# Optimization_Assignment_3

./: CMakeLists.txt  README.md  VogelsMethod.cpp  VogelsMethod.hpp  main.cpp
headers/: Matrix.hpp  NorthwestCornerMethod.hpp  RusselsMethod.hpp  Vector.hpp  VogelsMethod.hpp
source/: Matrix.cpp  NorthwestCornerMethod.cpp  RusselsMethod.cpp  Vector.cpp  VogelsMethod.cpp
tests/: test_1.txt  test_10.txt  test_10_ans.txt  test_11.txt  test_1_ans.txt  test_2.txt  test_2_ans.txt  test_3.txt  test_3_ans.txt  test_4.txt  test_4_ans.txt  test_5.txt  test_5_ans.txt  test_6.txt  test_7.txt  test_8.txt  test_9.txt  test_9_ans.txt
